--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     flex-wrap: wrap;
     justify-content: center;
 }
-/* .tam{
+.tam{
     width: 200px;
     height: 250px;
     border: 1px solid black;
@@ -13,15 +13,15 @@
     justify-content: center;
     margin-left: 10px;
     margin-right: 10px;
-} */
-/* .feedButton{
+}
+.feedButton{
     width: 160px;
     height: 50px;
-} */
-/* .span{
+}
+.span{
     color: red;
-} */
-/* .disp{
+}
+.disp{
     width: 180px;
     height: 180px;
     border: 1px solid black;
@@ -30,11 +30,11 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-} */
-/* .dino{
+}
+.dino{
     width: 50px;
     height: auto;
-} */
+}
 .dinoDead{
     width: 50px;
     height: auto;
